--- a/_pages/cs110.md
+++ b/_pages/cs110.md
@@ -1,1 +1,15 @@
+---
+layout: archive
+title: "CS 110"
+permalink: /cs110/
+author_profile: true
+---
+{% include base_path %} 
 
+Welcome to CS110
+========
+Welcome all students to course CS 110- Introduction to Computer Science and Applications. I will post all important announcements, practice problems and some interesting stuff about computers on this page. 
+
+Class Information
+========
+We will meet at following time and location for our classes
