--- a/_pages/cs110.md
+++ b/_pages/cs110.md
@@ -12,4 +12,18 @@ Welcome all students to course CS 110- Introduction to Computer Science and Appl
 
 Class Information
 ========
-We will meet at following time and location for our classes
+We will meet at following time and location for our classes. 
+
+* **Class Time and Location**
+| Section 	| Day       	| Time            	| Location           	|
+|---------	|-----------	|-----------------	|--------------------	|
+|    01   	| Wednesday 	| 8:25 AM-9:20 AM 	| College Ave Campus 	|
+|    03   	| Wednesday 	| 10:05 AM-11 AM  	| College Ave Campus 	|
+
+* **Office Hours**: TBD
+* **Lab Support Hours**: TBD
+
+Contact Me
+========
+* **Email**: saurabh (dot) deochake (at) rutgers (dot) edu
+* **Office**: Room 278, Hill Center, Busch Campus, Piscataway Township
