--- a/_pages/cs110.md
+++ b/_pages/cs110.md
@@ -14,11 +14,9 @@ Class Information
 ========
 We will meet at following time and location for our classes. 
 
-* **Class Time and Location**     
-| Section 	| Day       	| Time            	| Location           	|    
-|---------	|-----------	|-----------------	|--------------------	|    
-|    01   	| Wednesday 	| 8:25 AM-9:20 AM 	| College Ave Campus 	|    
-|    03   	| Wednesday 	| 10:05 AM-11 AM  	| College Ave Campus 	|      
+* **Class Time and Location**:            
+  * **Section 01**: Wednesdays 8:25 AM-9:20 AM at College Ave
+  * **Section 03**: Wednesdays 10:05 AM-11 AM at College Ave
 
 * **Office Hours**: TBD
 * **Lab Support Hours**: TBD
@@ -26,4 +24,4 @@ We will meet at following time and location for our classes.
 Contact Me
 ========
 * **Email**: saurabh (dot) deochake (at) rutgers (dot) edu
-* **Office**: Room 278, Hill Center, Busch Campus, Piscataway Township
+* **Office**: Room 278, Hill Center, Busch Campus, Piscataway Township (By appointment or office hours)
