--- a/_pages/cs110.md
+++ b/_pages/cs110.md
@@ -19,6 +19,10 @@ We will meet at following time and location for our classes.
 * **Office Hours**: TBD
 * **Lab Support Hours**: TBD
 
+Downloads
+=========
+1. [Scratch Programming Editor](https://scratch.mit.edu/download). Please make sure you download Scratch 2.0 because earlier versions of Scratch editor are not supported and the assignments will not be graded if done in Scratch 1.4 or earlier. 
+
 Contact Me
 ========
 * **Email**: saurabh (dot) deochake (at) rutgers (dot) edu
