--- a/_pages/cs110.md
+++ b/_pages/cs110.md
@@ -21,7 +21,7 @@ We will meet at following time and location for our classes.
 
 Downloads
 =========
-1. [Scratch Programming Editor](https://scratch.mit.edu/download). 
+1. [**Scratch Programming Editor**](https://scratch.mit.edu/download)
    * Please make sure you download Scratch 2.0 because earlier versions of Scratch editor are not supported and the assignments will not be graded if done in Scratch 1.4 or earlier. 
 
 Contact Me
