--- a/_pages/cs110.md
+++ b/_pages/cs110.md
@@ -8,8 +8,8 @@ author_profile: true
 
 Welcome all students to course CS 110- Introduction to Computer Science and Applications. I will post all important announcements, practice problems and some interesting stuff about computers on this page. 
 
-Class Information
-========
+## Class Information
+
 We will meet at following time and location for our classes. 
 
 * **Class Time and Location**:            
@@ -19,12 +19,16 @@ We will meet at following time and location for our classes.
 * **Office Hours**: TBD
 * **Lab Support Hours**: TBD
 
-Downloads
-=========
+## Downloads
+
 1. [**Scratch Programming Editor**](https://scratch.mit.edu/download)
    * Please make sure you download Scratch 2.0 because earlier versions of Scratch editor are not supported and the assignments will not be graded if done in Scratch 1.4 or earlier. 
+   
+## Reviews
 
-Contact Me
-========
+Read what my previous students had to say about the course. [**Click here.**](https://sirs.ctaar.rutgers.edu/index.php?survey%5Blastname%5D=Deochake&survey%5Bsemester%5D=&survey%5Byear%5D=&mode=name&submit=)
+
+## Contact Me
+
 * **Email**: saurabh (dot) deochake (at) rutgers (dot) edu
 * **Office**: Room 278, Hill Center, Busch Campus, Piscataway Township (By appointment or office hours)
