--- a/_pages/cs110.md
+++ b/_pages/cs110.md
@@ -35,4 +35,4 @@ Read what my previous students had to say about the course. [**Click here.**](ht
 ## Contact Me
 
 * **Email**: saurabh (dot) deochake (at) rutgers (dot) edu
-* **Office**: Room 278, Hill Center, Busch Campus, Piscataway Township (By appointment or office hours)
+* **Office**: Room 278, Hill Center, Busch Campus, Piscataway, New Jersey (By appointment or office hours)
