--- a/_pages/cs110.md
+++ b/_pages/cs110.md
@@ -8,7 +8,8 @@ author_profile: true
 
 Welcome all students to course CS 110- Introduction to Computer Science and Applications. I will post all important announcements, practice problems and some interesting stuff about computers on this page. 
 
-## Class Information
+## Fall 2017 
+### Class Information
 
 We will meet at following time and location for our classes. 
 
