--- a/_pages/cs110.md
+++ b/_pages/cs110.md
@@ -21,8 +21,8 @@ We will meet at following time and location for our classes.
   | Section 03  | Wednesday   | 10:05 AM-11 AM  | RUAB 1220 (Lab 2), College Ave  |
 
 
-* **Office Hours**: TBD
-* **Lab Support Hours**: TBD
+* **Office Hours**: Wednesdays 2:30 PM-3:30 PM
+* **Lab Support Hours**: Wednesdays 12:00 PM-2:00 PM
 
 ## Downloads
 
@@ -36,4 +36,4 @@ Read what my previous students had to say about the course. [**Click here.**](ht
 ## Contact Me
 
 * **Email**: saurabh (dot) deochake (at) rutgers (dot) edu
-* **Office**: Room 278, Hill Center, Busch Campus, Piscataway, New Jersey (By appointment or office hours)
+* **Office**: Room 378, Hill Center, Busch Campus, Piscataway, New Jersey (By appointment or office hours)
