--- a/_pages/cs110.md
+++ b/_pages/cs110.md
@@ -24,6 +24,10 @@ We will meet at following time and location for our classes.
 * **Office Hours**: Wednesdays 2:30 PM-3:30 PM
 * **Lab Support Hours**: Wednesdays 12:00 PM-2:00 PM
 
+## Hourly Exam #1
+* Hourly Exam #1 will be conducted on Tuesday, 10th October, 2017 in **Scott Hall Room 123**. Seating arrangements are already out. If you do not have your seat numbers, please contact me at the earliest.
+* Some of important question types are posted in form of a Question Bank. Please click [**here**](http://saurabh-deochake.github.io/cs110/exam1) to access the questions.
+
 ## Downloads
 
 1. [**Scratch Programming Editor**](https://scratch.mit.edu/download)
