--- a/_pages/cs110.md
+++ b/_pages/cs110.md
@@ -35,7 +35,7 @@ We will meet at following time and location for our classes.
    
 ## Reviews
 
-Read what my previous students had to say about the course. [**Click here.**](https://sirs.ctaar.rutgers.edu/index.php?survey%5Blastname%5D=Deochake&survey%5Bsemester%5D=&survey%5Byear%5D=&mode=name&submit=){:target="_blank"}
+Read what my previous students had to say about the course. [**Click here.**](https://sirs.ctaar.rutgers.edu/index.php?survey%5Blastname%5D=Deochake&survey%5Bsemester%5D=&survey%5Byear%5D=&mode=name&submit=)
 
 ## Contact Me
 
